Make link a hyperlink

--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
 						<td>{price[i]}</td>
 						<td>{lowestprice[i]}</td>
 						<td>{highestprice[i]}</td>
-						<td>{link[i]}</td>
+						<td><a href = {link[i]}>link</a></td>
 					</tr>
 				);
 			});
