Open links in new tabs

--- a/static/index.html
+++ b/static/index.html
@@ -54,8 +54,8 @@
 							<td>{Fprice[i]}</td>
 							<td>{lowestprice[i]}</td>
 							<td>{highestprice[i]}</td>
-							<td><a href = {Alink[i]}>link</a></td>
-							<td><a href = {Flink[i]}>link</a></td>
+							<td><a target = '_blank' href = {Alink[i]}>link</a></td>
+							<td><a target = '_blank' href = {Flink[i]}>link</a></td>
 						</tr>
 					);
 				}
@@ -67,7 +67,7 @@
 							<td>{Fprice[i]}</td>
 							<td>{lowestprice[i]}</td>
 							<td>{highestprice[i]}</td>
-							<td><a href = {Alink[i]}>link</a></td>
+							<td><a target = '_blank' href = {Alink[i]}>link</a></td>
 							<td>N/A</td>
 						</tr>
 					);
@@ -81,7 +81,7 @@
 							<td>{lowestprice[i]}</td>
 							<td>{highestprice[i]}</td>
 							<td>N/A</td>
-							<td><a href = {Flink[i]}>link</a></td>
+							<td><a target = '_blank' href = {Flink[i]}>link</a></td>
 						</tr>
 					);
 				}
