--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
 	<div id="container"></div>
+	<footer><a href="https://github.com/DevMashru/Web-Technologies.git" id = "github">Github</a></footer>
 </body>
 </html>
